--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn
-    .com/bootswatch/3.3.5/paper/bootstrap.min.css'>
+    <title>Messenger</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style type='text/css'>
         body, input{
             font-size: 24px !important;
@@ -14,9 +13,9 @@
     <div id='app' class='container-fluid'>
         <li>Channel Name</li>
     </div>
-    <script src='//fb.me/react-0.14.0.js'></script>
-    <script src='//fb.me/react-dom-0.14.0.js'></script>
-    <script src='//cdnjs.clodfire.com/ajax/libs/babel-core/5.8.25/browser.js'></script>
+    <script crossorigin src="//unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js'></script>
     <script type='text/babel' src='app.js'></script>
 </body>
 </html>
